# auto_derivator

./: CMakeLists.txt  Dockerfile  README.md  grad_demo.cpp  model_demo.cpp
autograd/: AutogradFunction.h  IntArrRef.h  Losses.h  Module.h  NumErrors.h  Optim.h  Slice.h  Tensor.h  TensorFactory.h  TensorOps.h  autograd.h
